# rootsy

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml
rootsy/: adapters.py  models.py  parser.py  reader.py  registry.py  types.py  validators.py
rootsy/models/: __init__.py  address.py  event.py  family.py  header.py  individual.py  multimedia.py  stucture.py
rootsy/parsers/: __init__.py  address.py  family.py  header.py  individual.py  multimedia.py
tests/: conftest.py  test_parser.py
tests/data/headers/: header_5.5.1.ged  header_7.0.ged
tests/parsers/: test_address.py  test_header.py
